WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
284098
[GStreamer][WebCodecs] Fix racy WorkQueues construction issues
https://bugs.webkit.org/show_bug.cgi?id=284098
Summary
[GStreamer][WebCodecs] Fix racy WorkQueues construction issues
Philippe Normand
Reported
2024-12-05 01:15:20 PST
.
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2024-12-05 01:17:35 PST
Pull request:
https://github.com/WebKit/WebKit/pull/37486
EWS
Comment 2
2024-12-05 03:17:00 PST
Committed
287394@main
(e8f13fa2a6a8): <
https://commits.webkit.org/287394@main
> Reviewed commits have been landed. Closing PR #37486 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-12-05 03:17:12 PST
<
rdar://problem/140970021
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug