[GStreamer][WebCodecs] Fix racy WorkQueues construction issues https://bugs.webkit.org/show_bug.cgi?id=284098

Reviewed by Jean-Yves Avenard.

In case WebCodecs are used from Workers the WorkQueue creation was prone to race conditions. Fix
this by building them from a once_flag handler.

* Source/WebCore/platform/audio/gstreamer/AudioDecoderGStreamer.cpp:
(WebCore::gstDecoderWorkQueue):
* Source/WebCore/platform/audio/gstreamer/AudioEncoderGStreamer.cpp:
(WebCore::gstEncoderWorkQueue):
* Source/WebCore/platform/graphics/gstreamer/VideoDecoderGStreamer.cpp:
(WebCore::gstDecoderWorkQueue):
* Source/WebCore/platform/graphics/gstreamer/VideoEncoderGStreamer.cpp:
(WebCore::gstEncoderWorkQueue):

Canonical link: https://commits.webkit.org/287394@main